# libplistkit

./: .gitignore  CHANGELOG.md  README.md  meson.build  meson_options.txt
examples/: manipulation.c  meson.build  simple_read.c  simple_write.c
include/plistkit/: plistkit.h  version.h.in
src/: array.c  dict.c  internal.h  parser.c  platform.c  plist.c  types.c  utf8.c  writer.c
tests/: meson.build  test.h  test_array.c  test_dict.c  test_main.c  test_parser.c  test_security.c  test_types.c  test_writer.c
